# OBForceField

./: CMakeLists.txt  install.sh
cmake/modules/: FindOpenCL.cmake
data/: .mmffchg.par.swp  gaff.prm  mmff94.ff
include/: GAFF  OBChargeMethod  OBCutOffGrid  OBFFParameterDB  OBFFType  OBForceField  OBFunction  OBFunctionTerm  OBLogFile  OBMinimize  OBNbrList  OBParameterDB  OBVariant  OBVectorMath
src/: obchargemethod.cpp  obchargemethod.h  obcutoffgrid.h  obffparameterdb.cpp  obffparameterdb.h  obfftype.cpp  obfftype.h  obforcefield.cpp  obforcefield.h  obfunction.cpp  obfunction.h  obfunctionterm.cpp  obfunctionterm.h  oblogfile.cpp  oblogfile.h  obminimize.cpp  obminimize.h  obnbrlist.cpp  obnbrlist.h  obparameterdb.h  obvariant.cpp  obvariant.h  vectormath.cpp  vectormath.h
src/chargemethods/: obgasteiger.cpp  obgasteiger.h
src/forcefields/: forcefieldghemical.cpp  forcefieldghemical.h  forcefielduff.cpp  forcefielduff.h
src/forcefields/gaff/: gafffunction.cpp  gaffparameter.cpp  gaffparameter.h  gafftype.cpp  gafftype.h
src/forcefields/mmff94/: angle.cpp  angle.h  bond.cpp  bond.h  cl.hpp  common.cpp  common.h  electro.cpp  electro.h  electro_opencl.cpp  electro_opencl.h  function.cpp  mmfffunction.cpp  mmffparameter.cpp  mmffparameter.h  mmfftype.cpp  mmfftype.h  oop.cpp  oop.h  parameter.cpp  parameter.h  strbnd.cpp  strbnd.h  torsion.cpp  torsion.h  vdw.cpp  vdw.h  vdw_opencl.cpp  vdw_opencl.h
src/forceterms/: Coulomb.cpp  Coulomb.h  LJ6_12.cpp  LJ6_12.h  angle.cpp  angle.h  bond.cpp  bond.h  bondcubicharmonic.cpp  bondcubicharmonic.h  torsion.cpp  torsion.h
tests/: CMakeLists.txt  forcefieldtest.cpp  gafffunctiontest.cpp  gaffgradienttest.cpp  gaffparameterdbtest.cpp  gradienttest.cpp  mmff94functiontest.cpp  mmff94parameterdbtest.cpp  mockfunction.h  nbrlisttest.cpp  varianttest.cpp
tools/: CMakeLists.txt  energy.cpp  minimize.cpp  minimize_gaff.cpp
